This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
2/7/18: Fixed failure to read a settings file with a script line having more
than 40 words (In 3.6).

1/24/18: Stopped calling DM to ensure existence of dark reference for a K2
camera when post-actions are going to occur (In 3.6).

1/23/18: Added output on status bar of frequency and resolution for a point
clicked in FFT with middle mouse button.

1/23/18: Added ctffind module, options to support fitting to Thon rings when
click in FFT, and CtfFind script command to run it with specified parameters.

1/10/18: Made non-calibration parameters saved in the short-term calibration
file be used even when the property to ignore short-terms cals is set.

1/10/18: Added property for limiting the frame sizes in montages fit to
polygons at specific mags.

1/3/18: Fixed bug in limiting K2 coordinates entered with SetCameraArea (In
3.6).

1/3/18: Added menu option and script command to reduce an image in size with
an antialiasing filter.

1/3/18: Added script command to start Navigator Acquire when the script ends,
and a Postpone button to the Acquire dialog for setting parameters only.

1/1/18: Expanded SuffixForExtraFile command to provide suffixes for more than
one extra file to open during Navigator acquisition.

1/1/18: Added option to save multiple extra Records into separate stack
files instead of all into one.

1/1/18: Allowed up to 6 STEM channels to be obtained simultaneously during
tilt series.  Added STEM channel name to mdoc file.

12/29/17: Made truncation when saving as bytes be expressed as percentage
instead of number of pixels, be saved as a setting, and have a separate value
for single-file saving so JPEG-compressed TIFFs can look OK without adjusting
contrast.
